--- a/expenses/templates/registration/login.html
+++ b/expenses/templates/registration/login.html
@@ -1,28 +1,7 @@
-{% extends "base_expenses.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}{% trans 'Log in' %}{% endblock %}
-
-{% block navigation %}
-{% endblock %}
-
 {% block content %}
-
-{# Reused contrib/admin/templates/admin/login.html #}
-
-{% if form.errors and not form.non_field_errors %}
-<p class="errornote">
-{% if form.errors.items|length == 1 %}{% trans "Please correct the error below." %}{% else %}{% trans "Please correct the errors below." %}{% endif %}
-</p>
-{% endif %}
-
-{% if form.non_field_errors %}
-{% for error in form.non_field_errors %}
-<p class="errornote">
-    {{ error }}
-</p>
-{% endfor %}
-{% endif %}
 
 <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
   <div class="form-row">
