--- a/expenses/templates/expenses/transactions.html
+++ b/expenses/templates/expenses/transactions.html
@@ -14,17 +14,25 @@
 {% endblock %}
 
 {% block table_row %}
+{% if row.3 == None %}
     <td><a href="/transactions/{{ row.0.id }}">{{ row.0.desc }}</a></td>
-    <td>{{ row.0.date_time|date:"Y-m-d H:i" }}</td>
+{% else %}
     <td>
-{% for sub_tr in row.1 %}
-<button class="btn btn-xs" role="button">{{ sub_tr.1 }}&nbsp;{{ sub_tr.2 }}</button>
-{% endfor %}
+        <a href="/sync/{{ row.3.id }}">Sync event</a>
+        <button class="btn btn-xs" role="button">{{ row.1.0.1 }}&nbsp;{{ row.3.balance }}</button>
+    </td>
+{% endif %}
+<td>{{ row.0.date_time|date:"Y-m-d H:i" }}</td>
+<td>
+    {% for sub_tr in row.1 %}
+    <button class="btn btn-xs" role="button">{{ sub_tr.1 }}&nbsp;{{ sub_tr.2 }}</button>
+    {% endfor %}
 </td>
-    <td>
-{% for tag_name in row.2 %}
-<button class="btn btn-xs" role="button">{{ tag_name }}</button>
-{% endfor %}</td>
+<td>
+    {% for tag_name in row.2 %}
+    <button class="btn btn-xs" role="button">{{ tag_name }}</button>
+    {% endfor %}
+</td>
 {% endblock %}
 
 {% block table_empty_text %}
