--- a/expenses/templates/expenses/account.html
+++ b/expenses/templates/expenses/account.html
@@ -1,5 +1,5 @@
 {% extends "expenses/base_table_view.html" %}
-{% load capture_tags i18n %}
+{% load capture_tags i18n expense_filters %}
 
 {% block table_heading %}{% trans "Account " %}"{{ account.name }}"{% endblock %}
 {% block table_button %}
@@ -31,8 +31,8 @@
     <td><a href="/transactions/{{ row.0.transaction.id }}">{{ row.1.transaction.desc }}</a></td>
     {% endif %}
     <td>{{ row.1.transaction.date_time|date:"Y-m-d H:i" }}</td>
-    <td>{{ row.1.amount |floatformat:2 }}</td>
-    <td>{{ row.2 }}</td>
+    <td>{{ row.1.amount|cents_to_string }}</td>
+    <td>{{ row.2|cents_to_string }}</td>
     <td>
 <div class="dropdown pull-right">
     {% if row.0 == None %}
