--- a/expenses/templates/expenses/preset_create.html
+++ b/expenses/templates/expenses/preset_create.html
@@ -16,7 +16,7 @@
 </div>
 <div class="form-horizontal">
     <h4>{% trans "Accounts" %}</h4>
-    {% include "expenses/i_accounts_list.html" with formset=accounts_form slider_label="Multiplier" step=0.1 decimals=2 %}
+    {% include "expenses/i_accounts_list.html" with formset=accounts_form slider_label="Multiplier" touchstep=0.1 step=0.1 decimals=2 %}
 </div>
 <div class="form-horizontal">
     <h4>{% trans "Tags" %}</h4>
