--- a/expenses/templates/expenses/tag.html
+++ b/expenses/templates/expenses/tag.html
@@ -25,7 +25,7 @@
     <td>{{ row.0.date_time|date:"Y-m-d H:i" }}</td>
     <td>
 {% for sub_tr in row.1 %}
-<button class="btn btn-xs" role="button">{{ sub_tr.1 }}&nbsp;{{ sub_tr.2 }}</button>
+<button class="btn btn-xs" role="button">{{ sub_tr.1 }}&nbsp;{{ sub_tr.2|cents_to_string }}</button>
 {% endfor %}
 </td>
 {% endblock %}
