--- a/expenses/templates/expenses/transaction_create.html
+++ b/expenses/templates/expenses/transaction_create.html
@@ -22,7 +22,7 @@
             <div class="form-group tmp-preset-amount-line" style="display:none">
                 <label class="col-xs-12 col-sm-2 control-label">Amount</label>
                 <div class="col-xs-12 col-sm-10">
-                    <input class="form-control tmp-preset-amount" placeholder="Amount" step="1" type="number" value="0" />
+                    <input class="form-control tmp-preset-amount" placeholder="Amount" step="0.01" type="number" value="0" />
                 </div>
             </div>
         </div>
@@ -99,6 +99,7 @@ $(function() {
             for (var i = 0; i < tags.length; i++) {
                 tagMap[tags[i].id].checkbox.prop('checked', true).trigger('change');
             }
+            $('#id_desc').val(preset['description']);
             $('.tmp-preset-amount').change();
         }
     });
@@ -107,7 +108,9 @@ $(function() {
         min: -10000000,
         max: 10000000,
         step: 1,
+        decimals: 2,
         maxboostedstep: 10,
+        forcestepdivisibility: 'none',
     });
 
     $('.tmp-preset-amount').change(function() {
@@ -135,7 +138,7 @@ $(function() {
 </div>
 <div class="form-horizontal">
     <h4>{% trans "Accounts" %}</h4>
-    {% include "expenses/i_accounts_list.html" with formset=accounts_form step=1 slider_label="Amount" %}
+    {% include "expenses/i_accounts_list.html" with formset=accounts_form touchstep=1 step=0.1 decimals=2 slider_label="Amount" %}
 </div>
 <div class="form-horizontal">
     <h4>{% trans "Tags" %}</h4>
