--- a/expense_tracker_frontend/src/components/common.scss
+++ b/expense_tracker_frontend/src/components/common.scss
@@ -17,3 +17,35 @@
   color: #000000;
   border: transparent;
 }
+.image-dropbox {
+  border: 1px dashed black;
+  height: 100px;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.03);
+  text-align: center;
+  align-content: center;
+  font-size: large;
+  color: gray;
+}
+.images-container {
+  display: flex;
+  overflow-x: auto;
+  gap: 10px;
+  padding-right: 10px;
+  border: 2px solid black;
+  background-color: rgba(0, 0, 0, 0.05);
+  align-content: center;
+}
+.image-box {
+  overflow-x: auto;
+  align-content: center;
+  position: relative;
+  max-width: 300px;
+  border: 1px solid black;
+}
+.image-remove-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  padding: 0;
+}
